Added support for linting SCSS files

--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "stylelint-config-speakap",
-  "version": "0.1.2",
-  "description": "Default stylelint config used by Speakap.",
-  "main": "css/index.js",
-  "license": "UNLICENSED",
-  "private": true,
-  "peerDependencies": {
-    "stylelint": "^9.9.0"
-  },
-  "dependencies": {
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-order": "^2.0.0"
-  }
+    "name": "stylelint-config-speakap",
+    "version": "0.1.2",
+    "description": "Default stylelint config used by Speakap.",
+    "main": "css/index.js",
+    "license": "UNLICENSED",
+    "private": true,
+    "files": [
+        "css/index.js",
+        "scss/index.js"
+    ],
+    "peerDependencies": {
+        "stylelint": "^9.9.0"
+    },
+    "dependencies": {
+        "stylelint-config-standard": "^18.2.0",
+        "stylelint-order": "^2.0.0",
+        "stylelint-scss": "^3.5.0"
+    }
 }
